# streaming-pipeline-framework

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: deploying-to-dataflow.md  edsp-abandoned-quote-recovery.md  how-the-pipeline-works.md  insurance-abandoned-quote-recovery.md
examples/edsp_quotes/: pipeline.py  simulate_traffic.py
examples/insurance_quotes/: pipeline.py  simulate_traffic.py
examples/insurance_quotes/terraform/: Makefile  bigquery.tf  outputs.tf  pubsub.tf  shared.tf  terraform.tfvars.example  variables.tf
examples/retail_orders/: check_health.py  pipeline.py  simulate_traffic.py
examples/retail_orders/terraform/: Makefile  apis.tf  bigquery.tf  iam.tf  outputs.tf  pubsub.tf  storage.tf  terraform.tfvars.example  variables.tf
src/streaming_pipeline_framework/: __init__.py  cli.py  framework.py  health.py  servicenow.py  sfmc.py
tests/: test_aggregate_integration.py  test_cli.py  test_dedup_integration.py  test_edsp_quotes_pipeline.py  test_framework.py  test_health.py  test_insurance_quotes_pipeline.py  test_servicenow.py  test_sfmc.py
