[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "streaming-pipeline-framework"
version = "0.1.0"
description = "A generic, domain-agnostic Apache Beam engine for ingest -> validate -> enrich -> window -> alert -> serve pipelines."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
gcp = ["apache-beam[gcp]>=2.56.0"]
servicenow = ["requests>=2.31"]
dev = ["pytest>=8.0", "requests>=2.31", "responses>=0.25"]

[tool.setuptools.packages.find]
where = ["src"]
